# InsPyPi-Search

./: .gitignore  pyproject.toml  requirements.txt
inspypi_search/: __about__.py  __init__.py  main.py  pip-search.py
inspypi_search/cli/: __init__.py
inspypi_search/cli/arguments/: __init__.py  standalone_search.py
inspypi_search/config/: __init__.py  errors.py  search.py  state.py
inspypi_search/errors/: __init__.py  output.py
inspypi_search/utils/: __init__.py  data.py  filesystem.py  history.py  logger.py  resparse.py  search.py
inspypi_search/utils/data/structs/table/: __init__.py  helpers.py
inspypi_search/webapp/: Home.py  __init__.py
inspypi_search/webapp/pages/: History.py
