[tool.poetry]
name = "inspypi-search"
version = "0.1.0"
description = ""
authors = ["Taylor-Jayde Blackstone <t.blackstone@inspyre.tech>"]
readme = "README.md"
packages = [{include = "inspypi_search"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.14.0"
matplotlib = "^3.6.2"
inspyre-toolbox = "^1.3"
pathvalidate = "^2.5.2"
dill = "^0.3.6"

[tool.poetry.scripts]
pip-search = 'inspypi_search:main.main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
