[tool.poetry]
name = "inspypi-search"
version = "0.1.0"
description = ""
authors = ["Taylor-Jayde Blackstone <t.blackstone@inspyre.tech>"]
readme = "README.md"
packages = [{include = "inspypi_search"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.14.0"
matplotlib = "^3.6.2"
pathvalidate = "^2.5.2"
dill = "^0.3.6"
setuptools = "^65.6.3"
inspy-logger = "^2.1.4"
inspyre-toolbox = "1.3.1.dev2"
luddite = "^1.0.2"

[tool.poetry.scripts]
pip-search = 'inspypi_search:main.main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
